# chatti

./: .editorconfig  .gitignore  GitHub  GitHub.pub  README.md  chatti-start.ps1  chatti-start.sh  chatti_start  chatti_tui.py  config_loader.py  file-structure.txt  git-push-syntax.txt  pyproject.toml  pyvenv.cfg  requirements.txt  showman.sh
chatti/: chatti_tui.py  config_loader.py
chatti/docs/: installation-guide.md
core/: __init__.py  api.py  attachments.py  commands.py  dev_check.sh  history.py  paths.py  pdf_utils.py  security.py  tickets.py  usage.py
docs/: API-Keys.md  MANUAL.md  README-Security.MD  README_Doctor.md  installation-guide.md  manual.md  readme.md
docs/man1/: chatti.1
scripts/: chatti-ascii-art.txt  chatti_go.py  make-bundle.sh  make-release.sh  make_release.sh  release_smoke.sh  showman.py  showman.sh
tools/: chatti_doctor.py
